# ClimateSentiment

./: .gitignore  main.py  pyproject.toml
notebooks/: data_prep.ipynb
sentiment/: data.py  dates.py
src/climatesentiment/: data.py
